--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -89,6 +89,14 @@
 	  <a class="dropdown-item" href="https://uiball.com/ldrs/" target="_blank">UiBall <span class="badge text-bg-info" style="font-family: 'font-weight-into';">Source Loaders</a>
 	  <a class="dropdown-item" href="https://poe.com" target="_blank">POE</a>
 	   <a class="dropdown-item" href="https://ui.aceternity.com/components" target="_blank">Ui Aceternity</a>
+	   <a class="dropdown-item disabled" href="#" aria-disabled="true"><mark style="background-color: yellow; color: grey;"><b>Front-End</b></mark></a>
+	   <a class="dropdown-item" href="https://www.shapedivider.app" target="_blank">Shape Divider</a> 
+	      <a class="dropdown-item" href="https://iconer.app" target="_blank">Iconer</a>
+	       <a class="dropdown-item" href="https://jonsuh.com/hamburgers/" target="_blank">Jonsuh</a>
+	       <a class="dropdown-item" href="https://www.transition.style" target="_blank">Transition</a>
+	      <a class="dropdown-item" href="https://cssloaders.github.io" target="_blank">Css Loaders</a>
+	       <a class="dropdown-item" href="https://wweb.dev/resources/css-separator-generator" target="_blank">Separator</a>
+	      <a class="dropdown-item" href="https://getcssscan.com/css-box-shadow-examples" target="_blank">Get Css Scan</a>
 	  </div>
       <div>
        <div class="dropdown-header"><b>Graphic Design</b></div>
@@ -119,7 +127,8 @@
 		<a class="dropdown-item" href="https://artlist.io/sfx" target="_blank">ArtList</a>
 		<a class="dropdown-item" href="https://bit.ly/prohumming" title="Pro Humming" target="_blank">بديل الموسيقة في المونتاج <span class="badge text-bg-warning">Drive</a>
 		<a class="dropdown-item" href="https://bit.ly/VideosEditing" title="Video Editing" target="_blank">Big Folder <span class="badge text-bg-warning">Drive</a>
-      </div>
+<a class="dropdown-item" href="https://bit.ly/VideosEditingv2" title="Video Editing" target="_blank">Big Folder V2 <span class="badge text-bg-warning">Drive</a>     
+	 </div>
 	  <div>
        <div class="dropdown-header"><b>No-CodeApp Builder</b></div>
        <a class="dropdown-item" href="https://www.goodbarber.com" target="_blank">Goodbarber</a>
@@ -246,7 +255,7 @@
 	 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 	 <div class="dropdown-header"><b>Free Links</b></div>
 	 <a class="dropdown-item" href="https://bit.ly/watikaty" target="_blank" >Watikaty <span class="badge text-bg-danger">خاص بالمغاربة فقط</a>
-	 <a class="dropdown-item" href="https://bit.ly/sigmacodedrive" target="_blank" >Google Drive For U</a>
+	 <a class="dropdown-item" href="https://bit.ly/sigmacodedrive" target="_blank" >Google Drive For U <span class="badge text-bg-warning">Importent!</a>
 	 <a class="dropdown-item" href="https://bit.ly/ethicalhackerr" target="_blank">ChatGPT <span class="badge text-bg-dark">Black Hat!</a>
 	 <a class="dropdown-item" href="https://bit.ly/blackhacker" target="_blank">ChatGPT <span class="badge text-bg-danger">White Hat!</a>
      <a class="dropdown-item" href="https://shorturl.at/lKZhT" target="_blank">Canva Pro <span class="badge text-bg-primary">Free</a>
