--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -101,6 +101,8 @@
       <div>
        <div class="dropdown-header"><b>Graphic Design</b></div>
 	   <a class="dropdown-item" href="https://www.photopea.com" target="_blank">Photopea</a>
+	   <a class="dropdown-item" href="https://kittl.com" target="_blank">Kittl</a>
+	   <a class="dropdown-item" href="https://www.designcap.com/app/" target="_blank">Design Cap</a>
        <a class="dropdown-item" href="https://www.template.net" target="_blank">Template</a>
 	   <a class="dropdown-item" href="https://beefree.io/templates" target="_blank">Beefree</a>
 	   <a class="dropdown-item" href="https://studio.polotno.com" target="_blank">Studio Polotno</a>
@@ -108,6 +110,9 @@
 	   <a class="dropdown-item" href="https://create.vista.com/templates/" target="_blank">Vista</a>
 	   <a class="dropdown-item" href="https://www.visme.co" target="_blank">Visme</a>
 	   <a class="dropdown-item" href="https://fanart.tv" target="_blank">Fan Art <span class="badge text-bg-danger">PosterTV</a>
+	   <a class="dropdown-item" href="https://www.footyrenders.com" target="_blank">FootyRenders &#9917;</a>
+	   <a class="dropdown-item" href="https://www.minimalmockups.com/mockups/" target="_blank">Minimal Mockups</a>
+	   <a class="dropdown-item" href="https://deblank.com/" target="_blank">Deblank <span class="badge text-bg-danger">Brand</a>
 	   <a class="dropdown-item disabled" href="#" aria-disabled="true"><mark style="background-color: yellow; color: grey;"><b>Color Palettes</b></mark></a>
 	   <a class="dropdown-item" href="https://colorhunt.co" target="_blank">ColorHunt</a>
 	   <a class="dropdown-item" href="https://palettemaker.com" target="_blank">PaletteMaker</a>
@@ -162,11 +167,14 @@
 		<a class="dropdown-item" href="https://unicornicons.com" target="_blank">Unicornicons <span class="badge text-bg-info" style="font-family: 'font-weight-light';">Animated Icons</a>
 		<a class="dropdown-item" href="https://app.animaker.com/dashboard" target="_blank">Animaker</a>
 	   <a class="dropdown-item" href="https://lumalabs.ai/genie?view=create" target="_blank">LumaLabs <span class="badge text-bg-info" style="font-family: 'font-weight-light';">Ai generate</a>
+	   <a class="dropdown-item" href="https://www.pacdora.com" target="_blank">Pacdora <span class="badge text-bg-danger">Paid</a>
+	   <a class="dropdown-item" href="https://www.tripo3d.ai/app" target="_blank">Tripo 3d <span class="badge text-bg-info">Ai</a>
       </div>
 	  <div>
 	  <div class="dropdown-header"><b>Illustrations</b></div>
 		  <a class="dropdown-item" href="https://www.autodraw.com" target="_blank">Auto Draw</a>
 		  <a class="dropdown-item" href="https://www.pngegg.com" target="_blank">PNG EGG</a>
+		   <a class="dropdown-item" href="https://storytribeapp.com" target="_blank">StoryTribeApp</a>
 	   <a class="dropdown-item" href="https://storyset.com" target="_blank">StorySet</a>
 	    <a class="dropdown-item" href="https://blush.design" target="_blank">Blush</a>
 		<a class="dropdown-item" href="https://www.opendoodles.com" target="_blank">OpenDoodles</a>
@@ -4964,6 +4972,7 @@ Includes basic shell scripting as part of the certification.
 			<li><a class="dropdown-item" href="https://grafikart.fr/formations" target="_blank" >Grafikart</a></li>
 <li><hr class="dropdown-divider"></li> 
 		  <li><a class="dropdown-item" href="https://freelearninglist.org" target="_blank">Free Learning List <span class="badge text-bg-success">Try It</a></li>
+		  <li><a class="dropdown-item" href="https://downloadlynet.ir" target="_blank">Free Udemy Courses</a></li>
 <li><a class="dropdown-item" href="https://www.discudemy.com/category/ethical-hacking" target="_blank">Free Udemy Courses</a></li>
 <li><a class="dropdown-item" href="https://hacksnation.com/t/course" target="_blank" >Free Courses 01</a></li>          
 		   <li><a class="dropdown-item" href="https://onehack.us" target="_blank" >Free Courses 02</a></li>
@@ -4985,7 +4994,7 @@ Includes basic shell scripting as part of the certification.
             <ul class="dropdown-menu dropdown-menu-end">
               <li><h6 class="dropdown-header" style="font-family: 'Vampire Wars';">Social Media Platform</h6></li>
 			  <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="https://www.instagram.com/marouan_anouar" target="_blank">Instagram</a></li>
+              <li><a class="dropdown-item" class="dropdown-item"href="https://www.instagram.com/marouan_anouar" target="_blank">Instagram</a></li>
               <li><a class="dropdown-item" href="https://www.linkedin.com/in/marouananouar/" target="_blank">Linkedin</a></li>
               <li><a class="dropdown-item" href="https://www.github.io/marouananouar" target="_blank">Github</a></li>
             </ul>
