--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -102,6 +102,7 @@
        <div class="dropdown-header"><b>Graphic Design</b></div>
 	   <a class="dropdown-item" href="https://www.photopea.com" target="_blank">Photopea</a>
 	   <a class="dropdown-item" href="https://kittl.com" target="_blank">Kittl</a>
+	       <a class="dropdown-item" href="https://unblast.com" target="_blank">Unblast</a>
 	   <a class="dropdown-item" href="https://www.designcap.com/app/" target="_blank">Design Cap</a>
        <a class="dropdown-item" href="https://www.template.net" target="_blank">Template</a>
 	   <a class="dropdown-item" href="https://beefree.io/templates" target="_blank">Beefree</a>
@@ -115,6 +116,7 @@
 	   <a class="dropdown-item" href="https://deblank.com/" target="_blank">Deblank <span class="badge text-bg-danger">Brand</a>
 	   <a class="dropdown-item disabled" href="#" aria-disabled="true"><mark style="background-color: yellow; color: grey;"><b>Color Palettes</b></mark></a>
 	   <a class="dropdown-item" href="https://colorhunt.co" target="_blank">ColorHunt</a>
+	      <a class="dropdown-item" href="https://pigment.shapefactory.co" target="_blank">Pigment</a>
 	   <a class="dropdown-item" href="https://palettemaker.com" target="_blank">PaletteMaker</a>
 	   <a class="dropdown-item" href="https://uigradients.com/#Mild" target="_blank">UiGradients</a>
 	   <a class="dropdown-item" href="https://www.postermywall.com" target="_blank">Postermywall</a>
@@ -174,6 +176,7 @@
 	  <div class="dropdown-header"><b>Illustrations</b></div>
 		  <a class="dropdown-item" href="https://www.autodraw.com" target="_blank">Auto Draw</a>
 		  <a class="dropdown-item" href="https://www.pngegg.com" target="_blank">PNG EGG</a>
+		  <a class="dropdown-item" href="https://wojak-studio.com" target="_blank">Wojak</a>
 		   <a class="dropdown-item" href="https://storytribeapp.com" target="_blank">StoryTribeApp</a>
 	   <a class="dropdown-item" href="https://storyset.com" target="_blank">StorySet</a>
 	    <a class="dropdown-item" href="https://blush.design" target="_blank">Blush</a>
