--- a/contact-us.html
+++ b/contact-us.html
@@ -352,6 +352,9 @@
 				     <li>
                                  <a href="https://sigmacodeagency.github.io/POD" target="_blank">POD</a>
                               </li>
+				     <li>
+                                 <a href="https://sigmacodeagency.github.io/Products" target="_blank">Products</a>
+                              </li>
 							  <li>
                                  <a href="./mindmap/index.html" target="_blank">Mind Map</a>
                               </li>
