--- a/about-us.html
+++ b/about-us.html
@@ -661,6 +661,7 @@
                                        aria-label="share us on instagram">
                                        <i class="fa-brands fa-instagram"></i>
                                     </a>
+					    
 									<a href="#" target="_blank"
                                        aria-label="My Mind Map For Learning">
                                        <i class="fa-solid fa-link"></i>
@@ -1665,6 +1666,9 @@
                               </li>
 				     <li>
                                  <a href="https://sigmacodeagency.github.io/POD" target="_blank">POD</a>
+                              </li>
+				     <li>
+                                 <a href="https://sigmacodeagency.github.io/Products" target="_blank">Products</a>
                               </li>
 							  <li>
                                  <a href="./mindmap/index.html" target="_blank">Mind Map</a>
